# darkiee-site

./: README.md  manage.py  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
darkiee_site/: asgi.py  settings.py  urls.py  wsgi.py
home/: urls.py  views.py
templates/: base.html  index.html  navbar.html
