[tool.poetry]
name = "darkiee_site"
version = "0.1.0"
description = "a personal site"
authors = ["deepak <info.deepakpatidar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
Pillow = "^8.3.1"
django-tinymce = "^3.3.0"
django-crispy-forms = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
